Add folder structure for C# Models, each radio model should have a Model.

--- a/SharpCAT/SharpCAT.csproj
+++ b/SharpCAT/SharpCAT.csproj
@@ -17,4 +17,9 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Radios\Icom\" />
+    <Folder Include="Models\Radios\Kenwood\" />
+  </ItemGroup>
+
 </Project>
