--- a/SharpCATForms/SharpCATForms.csproj
+++ b/SharpCATForms/SharpCATForms.csproj
@@ -79,5 +79,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SharpCAT\SharpCAT.csproj">
+      <Project>{dad3e7be-905a-4768-a695-0bcf96171e35}</Project>
+      <Name>SharpCAT</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
