Formatting and cleanup.

--- a/SharpCATService/SharpCATService.csproj
+++ b/SharpCATService/SharpCATService.csproj
@@ -46,11 +46,11 @@
   <ItemGroup>
     <Compile Include="Client.cs" />
     <Compile Include="Server.cs" />
-    <Compile Include="Service1.cs">
+    <Compile Include="Service.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Service1.Designer.cs">
-      <DependentUpon>Service1.cs</DependentUpon>
+    <Compile Include="Service.Designer.cs">
+      <DependentUpon>Service.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
